...
                        android:layout_marginTop="10dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                            android:id="@+id/loand_add_client"
                            style="@style/EditTextLogin"
                            android:layout_marginRight="3dp"
                            android:hint="@string/select_client"
                            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                            android:layout_marginTop="10dp"
                            android:lines="2"
...
                            android:layout_marginRight="5dp"
                            android:src="@drawable/ic_baseline_person_add_24"
                            app:tint="#95B1CD" />
                </LinearLayout>

                <EditText
                        android:id="@+id/loand_add_capital"
                        style="@style/EditTextLogin"
                        android:hint="@string/capital"
                        android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:inputType="number"
                />
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <EditText
                            android:layout_width="wrap_content"
                            android:id="@+id/loand_add_percentage"
                            style="@style/EditTextLogin"
                            android:hint="@string/percentage"
                            android:drawableLeft="@drawable/ic_arrow_drop_up_black_24dp"
                            android:layout_marginTop="10dp"
                            android:inputType="numberDecimal"
                            android:layout_marginRight="5dp"
...
                            android:layout_marginTop="10dp"
                            android:paddingLeft="5dp"
                            android:layout_marginRight="5dp"
                    />
                    <EditText
                            android:layout_width="wrap_content"
                            android:id="@+id/loand_add_day"
                            style="@style/EditTextLogin"
                            android:hint="@string/every_days_example"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="0dp"
                            android:inputType="number"
                            android:layout_weight="1"
...
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:text="@string/num_dues" />

                    <EditText
                            android:id="@+id/loand_add_dues"
                            style="@style/EditTextLogin"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:hint="@string/every_days_example"
                            android:inputType="number"
                            android:text="" />
                </LinearLayout>

                <TextView
                        android:id="@+id/loand_add_date"
                        style="@style/EditTextLogin"
                        android:hint="@string/date_loand"
                        android:drawableLeft="@drawable/ic_date_range_black_24dp"
                        android:layout_marginTop="10dp"
                        android:inputType="date"
                />
...
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BEBCBC"
            />
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/recycler_view_dues">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>


        </androidx.cardview.widget.CardView>
        <Button
                android:id="@+id/Btn_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/save"
                android:background="@drawable/btn_login"
                android:textColor="#fff"
...
