<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:showIn="@layout/app_bar_admin"
        android:background="@color/grey_5"
        tools:context=".home.AdminActivity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Home"
            android:layout_above="@id/navigation"
            android:layout_marginBottom="5dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            app:itemIconTint="@color/color_state_primary"
            app:itemTextColor="@color/color_state_primary"
            app:menu="@menu/menu_bottom_navigation_basic" />
</RelativeLayout>
